--- a/jemdoc.css
+++ b/jemdoc.css
@@ -39,7 +39,7 @@ body {
 	background: white;
 	text-align: left;
 	vertical-align: top;
-	min-width: 800px;
+	max-width: 1600px;
 	width: 800px;
 }
 
